# bazel_podman

./: BUILD.bazel  BUILD.bazel.tpl  LICENSE  MODULE.bazel  README.md  container.bzl  container.md  defs.bzl  extensions.bzl  kube.bzl  kube.md  kube_launcher.tpl  launcher.tpl  provider.bzl  repo.bzl  setup.tpl  toolchain.bzl  wrapper.bzl  wrapper.tpl
