load(":defs.bzl", "podman_toolchain_rule")

exports_files([
    "setup.tpl",
    "wrapper.tpl",
    "BUILD.bazel.tpl",
])

toolchain_type(
    name = "podman_toolchain_type",
)

podman_toolchain_rule(
    name = "podman_toolchain_impl",
    executable = "@podman//:runtime",
)

toolchain(
    name = "podman_toolchain",
    toolchain = ":podman_toolchain_impl",
    toolchain_type = ":podman_toolchain_type",
)

