module(
    name = "bazel_podman",
)

podman = use_extension("//:extensions.bzl", "podman")
use_repo(podman, "podman")

bazel_dep(name = "stardoc", version = "0.6.2", repo_name = "io_bazel_stardoc")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")

register_toolchains("//:podman_toolchain")
